<resources>
    <string name="app_name">Alcatel Shop</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="discovery">Discovery</string>
    <string name="service">Service</string>
    <string name="to_pay">To Pay</string>
    <string name="to_receive">To Receive</string>
    <string name="to_comment">To Comment</string>
    <string name="returns">Returns</string>
    <string name="favorite">Favorite</string>
    <string name="coupons">Coupons</string>
    <string name="other">Others</string>
    <string name="all_orders">All Orders</string>
    <string name="service_site">Service site</string>
    <string name="usual_question">Usual question</string>
    <string name="contact_us">Contact us</string>
    <string name="feedback">Feedback</string>
    <string name="toolbar_hint_search">Search</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="account">Account</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="you_can_log_in_with">You Can Log In With</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="sales_ranking">Sales ranking</string>
    <string name="spacial_sales">Spacial sales</string>
    <string name="accessories">Accessories</string>
    <string name="get_coupon">Get coupon</string>
    <string name="share">Share</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="buy_now">Buy now</string>
    <string name="favorable_rate">Favorable rate</string>
</resources>
