<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_user_profile_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="20dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingTop="20dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civ_user_profile"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@mipmap/avatar_default"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/colorBackground"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="Soopim@tcl.com"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>

            <include layout="@layout/iv_icon_next"/>
        </LinearLayout>

        <LinearLayout
            style="@style/ServiceItem">

            <TextView
                android:id="@+id/tv_all_orders"
                style="@style/ServiceMenuTitleText"
                android:drawableEnd="@mipmap/general_ic_next"
                android:text="@string/all_orders"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/ll_to_pay"
                    style="@style/ServiceOrdersMenu">

                    <ImageView
                        style="@style/ServiceOrdersMenuIcon"
                        android:src="@mipmap/service_ic_pay"/>

                    <TextView
                        style="@style/ServiceOrdersMenuText"
                        android:text="@string/to_pay"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_to_receive"
                    style="@style/ServiceOrdersMenu">

                    <ImageView
                        android:id="@+id/imageView"
                        style="@style/ServiceOrdersMenuIcon"
                        android:src="@mipmap/service_ic_receive"/>

                    <TextView
                        style="@style/ServiceOrdersMenuText"
                        android:text="@string/to_receive"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_to_comment"
                    style="@style/ServiceOrdersMenu">

                    <ImageView
                        style="@style/ServiceOrdersMenuIcon"
                        android:src="@mipmap/service_ic_comments"/>

                    <TextView
                        style="@style/ServiceOrdersMenuText"
                        android:text="@string/to_comment"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_returns"
                    style="@style/ServiceOrdersMenu">

                    <ImageView
                        style="@style/ServiceOrdersMenuIcon"
                        android:src="@mipmap/service_ic_returns"/>

                    <TextView
                        style="@style/ServiceOrdersMenuText"
                        android:text="@string/returns"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            style="@style/ServiceItem">

            <TextView
                style="@style/ServiceMenuTitleText"
                android:text="My"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/ll_favorite"
                    style="@style/ServiceOrdersMenu">

                    <ImageView
                        style="@style/ServiceMyMenuIcon"
                        android:src="@mipmap/service_my_ic_favorite"/>

                    <TextView
                        style="@style/ServiceOrdersMenuText"
                        android:text="@string/favorite"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_coupons"
                    style="@style/ServiceOrdersMenu">

                    <ImageView
                        style="@style/ServiceMyMenuIcon"
                        android:src="@mipmap/service_my_ic_coupons"/>

                    <TextView
                        style="@style/ServiceOrdersMenuText"
                        android:text="@string/coupons"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_others"
                    style="@style/ServiceOrdersMenu">

                    <ImageView
                        style="@style/ServiceMyMenuIcon"
                        android:src="@mipmap/service_my_ic_other"/>

                    <TextView
                        style="@style/ServiceOrdersMenuText"
                        android:text="@string/other"/>
                </LinearLayout>

                <LinearLayout
                    style="@style/ServiceOrdersMenu"
                    android:visibility="invisible">

                    <ImageView
                        style="@style/ServiceOrdersMenuIcon"
                        android:src="@mipmap/service_ic_pay"/>

                    <TextView
                        style="@style/ServiceOrdersMenuText"
                        android:text="@string/to_pay"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_service_site"
            style="@style/ServiceSimpleItem"
            android:layout_marginTop="12dp">

            <ImageView
                android:src="@mipmap/service_ic_service_site"
                style="@style/ServiceSimpleItemIcon"/>

            <TextView
                style="@style/ServiceSimpleItemTv"
                android:text="@string/service_site"/>

            <include layout="@layout/iv_icon_next"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_usual_question"
            style="@style/ServiceSimpleItem">

            <ImageView
                android:src="@mipmap/service_ic_question"
                style="@style/ServiceSimpleItemIcon"/>

            <TextView
                style="@style/ServiceSimpleItemTv"
                android:text="@string/usual_question"/>

            <include layout="@layout/iv_icon_next"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_contact_us"
            style="@style/ServiceSimpleItem">

            <ImageView
                android:src="@mipmap/service_ic_contact"
                style="@style/ServiceSimpleItemIcon"/>

            <TextView
                style="@style/ServiceSimpleItemTv"
                android:text="@string/contact_us"/>

            <include layout="@layout/iv_icon_next"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_feedback"
            style="@style/ServiceSimpleItem">

            <ImageView
                android:src="@mipmap/service_ic_feedback"
                style="@style/ServiceSimpleItemIcon"/>

            <TextView
                style="@style/ServiceSimpleItemTv"
                android:text="@string/feedback"/>

            <include layout="@layout/iv_icon_next"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>