<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical" >

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:background="@drawable/bg_home_search"
                android:hint="Search"/>

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="12dp"
                android:clickable="true"
                android:background="@drawable/selector_cart"/>
        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_bottom_navigation"
        android:orientation="horizontal"
        android:id="@+id/rg_bottom_tags" >

        <RadioButton
            android:id="@+id/rb_home"
            style="@style/BottomTagStyle"
            android:drawableTop="@drawable/selector_general_ic_home"
            android:text="@string/home" />

        <RadioButton
            android:id="@+id/rb_news"
            style="@style/BottomTagStyle"
            android:drawableTop="@drawable/selector_general_ic_category"
            android:text="@string/category" />

        <RadioButton
            android:id="@+id/rb_service"
            style="@style/BottomTagStyle"
            android:drawableTop="@drawable/selector_general_ic_discovery"
            android:text="@string/discovery" />

        <RadioButton
            android:id="@+id/rb_gov"
            style="@style/BottomTagStyle"
            android:drawableTop="@drawable/selector_general_ic_service"
            android:text="@string/service" />

    </RadioGroup>

</LinearLayout>
