<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.tcl.lishanwang.oneshop.view.AutoScrollViewPager
            android:id="@+id/vp_home_looping_img"
            android:layout_width="match_parent"
            android:layout_height="180dp"/>

        <LinearLayout
            android:id="@+id/ll_home_loop_indicator"
            android:layout_width="wrap_content"
            android:layout_height="3dp"
            android:orientation="horizontal"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="12dp"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:background="@color/colorWhite">

        <LinearLayout
            style="@style/ServiceOrdersMenu"
            android:paddingTop="15dp">

            <ImageView
                style="@style/HomeHorizontalMenuIcon"
                android:src="@mipmap/home_ic_sales"/>

            <TextView
                style="@style/ServiceOrdersMenuText"
                android:text="@string/sales_ranking"
                android:textColor="@color/colorGray"/>
        </LinearLayout>

        <LinearLayout
            style="@style/ServiceOrdersMenu"
            android:paddingTop="15dp">

            <ImageView
                style="@style/HomeHorizontalMenuIcon"
                android:src="@mipmap/home_ic_spcial"/>

            <TextView
                style="@style/ServiceOrdersMenuText"
                android:text="@string/spacial_sales"
                android:textColor="@color/colorGray"/>
        </LinearLayout>

        <LinearLayout
            style="@style/ServiceOrdersMenu"
            android:paddingTop="15dp">

            <ImageView
                style="@style/HomeHorizontalMenuIcon"
                android:src="@mipmap/home_ic_accessories"/>

            <TextView
                style="@style/ServiceOrdersMenuText"
                android:text="@string/accessories"
                android:textColor="@color/colorGray"/>
        </LinearLayout>

        <LinearLayout
            style="@style/ServiceOrdersMenu"
            android:paddingTop="15dp">

            <ImageView
                style="@style/HomeHorizontalMenuIcon"
                android:src="@mipmap/home_ic_coupon"/>

            <TextView
                style="@style/ServiceOrdersMenuText"
                android:text="@string/get_coupon"
                android:textColor="@color/colorGray"/>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>