<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activity_commodity_detail"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tcl="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tcl.lishanwang.oneshop.activity.CommodityInfoActivity">

    <com.tcl.lishanwang.oneshop.view.GeneralToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tcl:isRightImgShow="true"
        tcl:title="Idol 4S Phone Case"/>

    <android.support.design.widget.TabLayout
        android:id="@+id/tl_commodity_info"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginBottom="1dp"
        app:tabBackground="@color/colorWhite"
        app:tabSelectedTextColor="@color/colorAccent"
        app:tabTextAppearance="@style/ServiceMenuTitleText"
        app:tabTextColor="@color/colorDarkGray"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_commodity_info"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/goods_favorite_off"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/favorite"
                android:textSize="10sp"/>
        </LinearLayout>

        <Space
            android:layout_width="1dp"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/goods_share"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/share"
                android:textSize="10sp"/>
        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:text="@string/add_to_cart"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#3581FF"
            android:gravity="center"
            android:text="@string/buy_now"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"/>
    </LinearLayout>
</LinearLayout>
